Fixed invisible numbers on cards in old browsers

--- a/client/session/card.css
+++ b/client/session/card.css
@@ -4,66 +4,77 @@
     height: 250px;
     position: relative;
 
-    -webkit-perspective: 800px;
-    perspective: 800px;
 }
 
 .session-player .card {
-    width: 100%;
-    height: 100%;
-
-    position: absolute;
-
+    transition: 0.6s;
     transform-style: preserve-3d;
-    -webkit-transform-style: preserve-3d;
-    transition: transform 1s;
+    position: relative;
 }
 
-.session-player .card__content {
-
-    margin: 0;
-    display: block;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-
+.session-player .card__content_side_front, .session-player .card__content_side_back {
     backface-visibility: hidden;
-    -webkit-backface-visibility: hidden;
+    transition: 0.6s;
+    transform-style: preserve-3d;
+
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .session-player .card__content_side_front {
-    transform: rotateY( 180deg );
+    /* for firefox 31 */
+    z-index: 2;
+    transform: rotateY(180deg);
 }
 
 .session-player .card__content_side_back {
     background-image: url('http://cdn.tutsplus.com/craft/uploads/2014/01/geometric-patterns-grid-garland.jpg');
-    border-radius: 10px;
+    transform: rotateY(0deg);
 }
 
-.session-player .card_flipped_yes {
-    transform: rotateY( 180deg );
+.session-player .card_flipped_yes .card__content_side_front {
+    transform: rotateY(0deg);
 }
 
-/* Common */
+.session-player .card_flipped_yes .card__content_side_back {
+    transform: rotateY(-180deg);
+}
 
+.session-player .card-container {
+    -webkit-perspective: 800px;
+    perspective: 800px;
+}
+
+/* Card */
 .card-container {
     margin: 10px;
+    width: 150px;
+    height: 220px;
 }
 
 .card {
-    border-radius: 10px;
-    background: #fff;
-    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-
-    width: 150px;
-    height: 220px;
-
-    display: inline-block;
+    width: inherit;
+    height: inherit;
 }
 
 .card__content {
     text-align: center;
     font: 100px/220px Arial, sans-serif;
+
+
+    height: inherit;
+    width: inherit;
+
+}
+
+.card__content_side_front {
+    background: #fff;
+}
+
+.card__content_side_front, .card__content_side_back {
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 }
 
 /* Player */
@@ -72,12 +83,14 @@
     height: 220px;
 }
 
-.session-player-cards .card {
-
-    transition: all 0.5s ease;
+.session-player-cards .card-container {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
 }
 
-.session-player-cards .card:hover {
+.session-player-cards .card-container:hover {
+    transition: all 0.5s ease;
     cursor: pointer;
 
     transform: scale(1.05,1.05);
